Fixed minor spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@
   padding: 0;
   box-sizing: border-box;
   transition: 400ms all ease-out;
-  outline: 1px solid green;
+  /* outline: 1px solid green; */
 }
 
 html {
@@ -228,6 +228,9 @@ a:hover {
 
 .menu--chk {
   display: none;
+}
+.with-checkbox {
+  background-color: #f3f3f5;
 }
 
 .with-checkbox span {
@@ -469,7 +472,8 @@ h4,
   margin-bottom: 0.5rem;
 }
 
-.service--more {
+.service--more,
+.with-checkbox {
   position: relative;
   width: 40%;
   max-width: 200px;
@@ -483,11 +487,12 @@ h4,
   opacity: 1;
   color: var(--navy);
   font-weight: 700;
-  background-color: #f3f3f5;
+  background-color: var(--gold) !important;
   margin: 0;
   padding-top: 0;
   padding-bottom: 0;
 }
+
 .service--more::before {
   bottom: 0 !important;
   height: 100% !important;
@@ -749,11 +754,10 @@ h4,
   content: "";
   position: absolute;
   width: 100%;
-  height: 4rem;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: 0;
+  margin-bottom: 2rem !important;
   /* padding: 0.5rem 2rem; */
   background-color: rgba(255, 255, 255, 0.16);
   display: grid;
@@ -927,12 +931,12 @@ details[open] summary {
 .link--more {
   outline: none;
   border: none;
-  width: 4rem !important;
+  font-family: "Poppins";
   font-weight: 700;
   cursor: pointer;
   display: flex;
   align-items: center;
-  background-color: var(--gold);
+  background-color: transparent;
   color: var(--navy);
 }
 .link--more::before {
@@ -1009,7 +1013,7 @@ address {
   top: 50%;
   left: 50%;
   width: var(--w);
-  height: 85vh;
+  height: 90vh;
   background-color: #fdfdff;
   padding: var(--sm-pad);
   display: flex;
@@ -1041,17 +1045,17 @@ address {
 
 #btnModalClose {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.452);
+  background-color: #1d1d4936;
   opacity: 0.86;
   color: var(--gold);
-  width: 6rem;
+  width: 10rem;
   height: 0.5rem;
   padding: 0;
   margin: 0 auto;
   left: 50%;
   transform: translateX(-50%);
   bottom: calc(var(--sm-pad) - 2rem);
-  animation: hey 4000ms infinite;
+  animation: hey 2000ms infinite;
   /* bottom: 0; */
 }
 
@@ -1179,7 +1183,7 @@ address {
   flex-direction: column;
   background-color: #fcfcfc;
   cursor: pointer;
-  padding: 36px;
+  padding: 2rem;
   transform: scale(0.98);
 }
 
@@ -1232,8 +1236,8 @@ address {
 .modal::backdrop {
   background-image: linear-gradient(
     to bottom right,
-    rgba(255, 255, 255, 0.219),
-    rgba(0, 0, 0, 0.315)
+    rgba(255, 255, 255, 0.671),
+    rgba(0, 0, 0, 0.329)
   );
   cursor: zoom-out;
 }
@@ -1244,6 +1248,19 @@ address {
   text-align: center;
 }
 
+.modal .list__item > * {
+  margin-bottom: 1rem;
+}
+
+.modal .item__name {
+  margin-bottom: 2rem;
+}
+
+.list__item li {
+  list-style-type: none;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+}
 #btnRequestProdQoute {
   display: none;
 }
